<resources>
    <string name="File_hint_two">File Path for PDF two</string>
    <string name="Filter_image_preview">Filter Image Preview</string>
    <string name="Filter_name">Filter</string>
    <string name="a0_to_a10">A0 to A10</string>
    <string name="a4">A4</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_first">First page</string>
    <string name="action_jump_to_page">Jump to page</string>
    <string name="action_last">Last page</string>
    <string name="action_rotate_clockwise">Rotate clockwise</string>
    <string name="action_rotate_counterclockwise">Rotate counterclockwise</string>
    <string name="action_view_document_properties">Properties</string>
    <string name="action_zoom_in">Zoom in</string>
    <string name="action_zoom_out">Zoom out</string>
    <string name="ad_attribution">Ad</string>
    <string name="add_images">Add Images</string>
    <string name="add_margins">Add Margins</string>
    <string name="add_password">Add password</string>
    <string name="add_text">Add Text</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_watermark">Add Watermark</string>
    <string name="album_name_all">All Media</string>
    <string name="all">All</string>
    <string name="allDocs">All Files</string>
    <string name="alldoc_app_id">ca-app-pub-9135490917790331~2278332952</string>
    <string name="alldoc_banner_id">ca-app-pub-9135490917790331/5254846702</string>
    <string name="alldoc_inters_id">ca-app-pub-9135490917790331/4698660542</string>
    <string name="alldoc_native_convert_id">ca-app-pub-9135490917790331/2476069304</string>
    <string name="alldoc_native_home_id">ca-app-pub-9135490917790331/5976330618</string>
    <string name="alldoc_native_image_list_id">ca-app-pub-9135490917790331/9640243459</string>
    <string name="alldoc_native_language_id">ca-app-pub-9135490917790331/3087848365</string>
    <string name="alldoc_native_list_file_id">ca-app-pub-9135490917790331/5848338103</string>
    <string name="alldoc_native_save_file_id">ca-app-pub-9135490917790331/8148603356</string>
    <string name="alldoc_open_id">ca-app-pub-9135490917790331/4400930036</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="allow_storage_permission">Allow permissions to view files</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_Id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_description">An easy to use Android application to convert your files to PDF.</string>
    <string name="app_name">All Document Reader</string>
    <string name="app_name_splash">All Document &lt;font color=#FF0000>Reader&lt;/font></string>
    <string name="app_open_id">/6499/example/app-open</string>
    <string name="app_searchbar_backward">Find Backward</string>
    <string name="app_searchbar_find">Find</string>
    <string name="app_searchbar_forward">Find Forward</string>
    <string name="app_toolsbar_back">Back</string>
    <string name="app_toolsbar_color">Pen Settings</string>
    <string name="app_toolsbar_draw">Draw Mode</string>
    <string name="app_toolsbar_eraser">UnErase</string>
    <string name="app_toolsbar_eraser_check">Erase</string>
    <string name="app_toolsbar_find">Find</string>
    <string name="app_toolsbar_hyperlink">Goto</string>
    <string name="app_toolsbar_internet_search">Internet Search</string>
    <string name="app_toolsbar_pen">UnDraw</string>
    <string name="app_toolsbar_pen_check">Draw</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="arrow_up">Arrow Up</string>
    <string name="b0_to_b10">B0 to B10</string>
    <string name="bad">Bad</string>
    <string name="banner_Id">/6499/example/banner</string>
    <string name="bar_name">All Documents Reader</string>
    <string name="border">Add Image Border</string>
    <string name="border_dialog_title">Border width : %d</string>
    <string name="border_width_prompt">Enter border width units</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_sav_text">Save Text</string>
    <string name="bundleKey">ImageUri</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="buy_now">BUY NOW</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_add_password">Password could not be applied to the PDF. Please check the PDF again.</string>
    <string name="cannot_add_watermark">Watermark could not be added to the PDF. Please check the PDF again.</string>
    <string name="card_content_descriptor">card</string>
    <string name="change_master_pwd">Change Master password</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_color_text">Choose a color :</string>
    <string name="choose_page_number_style">Choose Page Number Style</string>
    <string name="choose_watermark_color">Choose color</string>
    <string name="choose_watermark_font_family">Choose font family</string>
    <string name="choose_watermark_style">Choose style</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="feedback">Feedback</string>
    <string name="language">Language</string>
    <string name="ok">OK</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_white">White</string>
    <string name="txt_go">Go</string>
    <string name="txt_goto_file">You can go to “File manager” to open your files</string>
    <string name="txt_goto_set">Go to set</string>
    <string name="txt_later">Later</string>
    <string name="txt_let_us">Let us better upgrade the functionality and experience for this application.</string>
    <string name="txt_no_permission">No permission</string>
    <string name="txt_ok">OK</string>
    <string name="txt_permission_required_to_access">Permission is required to acces all files.</string>
    <string name="txt_please_feedback">Please send feedback to us</string>
    <string name="txt_premium">Premium</string>
    <string name="txt_send">Send</string>
    <string name="txt_set_default_reader_for">Set as Default Reader for Document</string>
    <string name="txt_set_our_app">Set our app as your default document reader for a better reading experience.</string>
</resources>