<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp">

            <com.ryu.document_reader.widget.view.ItemSetting
                android:id="@+id/btnShare"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:icon="@drawable/ic_share"
                app:txtTitle="@string/share_app" />

            <com.ryu.document_reader.widget.view.ItemSetting
                android:id="@+id/btnRateUs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:icon="@drawable/ic_rate_app"
                app:txtTitle="@string/rate_app" />

            <com.ryu.document_reader.widget.view.ItemSetting
                android:id="@+id/btnFeedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:icon="@drawable/ic_feedback"
                app:txtTitle="@string/feedback" />

            <com.ryu.document_reader.widget.view.ItemSetting
                android:id="@+id/btnTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:icon="@drawable/ic_theme"
                app:txtTitle="@string/theme" />

            <com.ryu.document_reader.widget.view.ItemSetting
                android:id="@+id/btnLanguage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:icon="@drawable/ic_language"
                app:txtTitle="@string/language" />

            <com.ryu.document_reader.widget.view.ItemSetting
                android:id="@+id/btnPremium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:icon="@drawable/ic_crown"
                app:txtTitle="@string/txt_premium" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>