<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_group_themes"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:background="@color/white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <RadioButton
            android:id="@+id/theme_white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/inter_medium"
            android:text="@string/theme_white" />

        <RadioButton
            android:id="@+id/theme_dark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/theme_dark" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCancelTheme"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/radioGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_button_oke"
        android:fontFamily="@font/inter_medium"
        android:text="@string/cancel"
        android:textColor="@color/white" />
</RelativeLayout>