<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@id/relativeLayout8"
        android:layout_width="fill_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/rlBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_permission" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/txt_no_permission"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/txt_permission_required_to_access"
            android:textColor="#ffafafaf"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/btnGotoSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_btn_goto_set"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/txt_goto_set"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_goto_setting"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvFile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@+id/btnGo"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:text="@string/txt_goto_file"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@+id/ivClose"
            android:background="@drawable/bg_btn_go"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/txt_go"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_baseline_clear_24"
            app:tint="#ffafafaf" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50.0dip"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/alldoc_banner_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/layoutLoadingAds"
        layout="@layout/content_ads_loading"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>