<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/txtCreatingPDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:fontFamily="@font/roboto_b"
            android:text="@string/creating_pdf"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEnterFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCreatingPDF"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/enter_file_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edtNameFile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnterFileName"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_enter_file_name"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/edtNameFile"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_button_ok_dialog"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/edtNameFile"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_toLeftOf="@id/btnOK"
            android:background="@drawable/bg_button_cancel_dialog"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>