<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:background="@drawable/bg_dialog_rating"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/ic_top_feedback" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:text="@string/txt_please_feedback"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/inter_medium"
        android:gravity="start"
        android:hint="@string/txt_let_us"
        android:maxLength="200"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="2.0">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_btn_send"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:primary="#66a5a5a5"
            android:text="@string/cancel"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btnSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_btn_send"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/txt_send"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>
</LinearLayout>