<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_permission"
    android:orientation="vertical"
    android:primary="@color/white">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_set_default_reader" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:gravity="start"
            android:text="@string/txt_set_default_reader_for"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvContentPermission"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:gravity="start"
            android:text="@string/txt_set_our_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/btnOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/bg_btn_good"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:primary="@color/color_pdf"
            android:text="@string/txt_ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_later"
            android:textColor="#ffafafaf"
            android:textSize="@dimen/_12ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>